# identity-service-jwks

./: .gitignore  .gitleaksignore  CODEOWNERS  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: sbom_json_to_csv.py  sbom_packages_to_csv.py
.github/workflows/: dependabot-auto-merge.yml  public_key_expiry.yml  sbom.yml
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  deploy-jwks-env.yml  deploy-jwks.yml
azure/components/: deploy-jwks-all.yml  deploy-jwks-env.yml  deploy-jwks.yml
jwks/dev/: 2cc3b4fd-1b16-4501-a34e-40088760e6cc.json  7c484695-3af2-4af0-8317-ed072a948b41.json  993e5b50-ec58-4ff7-b7e1-b61cb1b8b1a1.json  ada4bfda-05b3-4a22-b323-ab36bb32c2b7.json  e09ceae8-cbf9-4e15-83fe-0ed5a6425aed.json  f7e896c9-d86d-4531-b0b3-3db3a91af791.json  fdbbd28a-3b58-402b-a83d-d6a41945d8b6.json
jwks/int/: 009c531e-072f-4468-a24c-4b6faab562da.json  01e6f9da-a7c3-4ae5-a9e5-595d4e2e36a6.json  021b739c-9c71-44f3-8157-a6aa4bef5ddd.json  02dfd3b0-8423-487e-81ab-3e845c0fd4fa.json  0331f48c-a9bc-49e9-a27b-c131d1d5966e.json  047b4bdc-8d39-46f6-9445-ec1696189efb.json  04e2ce75-cfe2-43c5-a832-2c4332d2c2cd.json  05287c09-96e3-4731-b155-4d8a26ee547c.json  0541c3e8-c955-4a26-8666-6d0dca28f3d4.json  06636684-974b-40ae-8490-badebde3927f.json  06a154aa-1e23-4198-ba62-6113229f1e51.json  07cd0159-4b4c-4023-9c5a-45de98913da0.json  07d61204-55d1-4ed5-bf1d-9dcf65f776aa.json  091b16c3-6ee3-45bc-98fb-cc437a2cf12d.json  (+230 more)
scripts/: Dockerfile  Makefile  check_public_key_expiry.py  list_apps.sh  make_jwk.py  pyproject.toml
scripts/config/: pre-commit.yaml
(+557 files in other folders)
