[tool.poetry]
name = "jwks-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
authlib = "^1.6.5"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
black = "^24.3"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
